--- a/index.html
+++ b/index.html
@@ -2,24 +2,34 @@
 <html>
     <head>
         <title>Flash Cards</title>
-        <link rel="stylesheet" type="text/css" href="reset.css" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <script src="angular.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <script src="js/lib/angular.js"></script>
         <script src="app.js"></script>
+        <script src="js/controllers/FlashCardController.js"></script>
+        <script src="js/controllers/MainController.js"></script>
+        <script src="js/controllers/StatsController.js"></script>
+        <script src="js/factories/FlashCardsFactory.js"></script>
+        <script src="js/factories/ScoreFactory.js"></script>
+        <script src="js/filters/CheatFilters.js"></script>
     </head>
 
     <body>
 
         <div ng-app="FlashCards">
+            <div ng-controller="StatsController" id="statistics" ng-include="'templates/statistics.html'">
 
+            </div>
             <div ng-controller="MainController">
-
+                <button ng-click = "getCategoryCards(category)" ng-repeat = "category in categories" class="category-button" ng-class="{active: category.clicked}">{{category.name}}</button>
+                <button ng-click = "reset()" class="category-button">Reset</button>
                 <div ng-repeat="flashCard in flashCards | orderBy:'question'" ng-controller="FlashCardController" class="flash-card">
+                    <h3>{{flashCard.category}}</h3>
                     <h1>{{ flashCard.question | uppercase }}</h1>
                     <ul class="flash-card-answers">
                         <li class="flash-card-answer"
                             ng-click="answerQuestion(answer)"
-                            ng-repeat="answer in flashCard.answers">
+                            ng-repeat="answer in flashCard.answers | cheat">
                             {{ answer.text }}
                         </li>
                     </ul>
